# mta-backend

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
project/apps/player/: admin.py  api.py  models.py  schemas.py  serializers.py  urls.py
project/apps/player/migrations/: 0001_initial.py  0002_playerdata.py  0002_playerdata_ammo_alter_playerdata_weapons.py  0003_alter_playerdata_table.py  0003_playerdata_weapons_in_hand.py  0004_alter_playerdata_ammo_alter_playerdata_weapons_and_more.py  0004_playerdata_wantedlevel.py  0005_alter_playerdata_armor_alter_playerdata_clothes_and_more.py  0006_alter_playerdata_weapons.py
project/config/: settings.py  urls.py
project/utils/: base.py
